--- a/views/movie/single.html
+++ b/views/movie/single.html
@@ -1,8 +1,8 @@
 {% extends "layouts/base.html" %}
 {% block body %}
-<section data-scroll-section class="post-content">
+<section class="post-content" data-scroll-section>
     <div class="container d-flex flex-column">
-        <div id = "single_movie_deets" class="w-100 d-flex row mt-3 px-0 justify-between">
+        <div class="w-100 d-flex row mt-3 px-0 justify-between" id="single_movie_deets">
             <div class="col-xl-6 col-lg-6 col-12 d-flex flex-column">
                 <h1 class="display-1">
                     {{movie.name}}
@@ -13,9 +13,10 @@
                 <div class="mt-1 d-flex flex-column w-50">
                     <div class="d-flex align-center mb-3">
                         {% if (movie.average_rating) %}
-                            {%for i in range(1, movie.average_rating | int + 1)%}
-                                <img style="width:20px; height: 20px;" class="mb-1" src="{{ url_for('static', filename='img/star.png') }}" alt="star">
-                            {%endfor%}
+                        {%for i in range(1, movie.average_rating | int + 1)%}
+                        <img alt="star" class="mb-1"
+                             src="{{ url_for('static', filename='img/star.png') }}" style="width:20px; height: 20px;">
+                        {%endfor%}
                         {%endif%}
                     </div>
 
@@ -94,56 +95,68 @@
                         </h5>
                     </div>
                 </div>
-                
+
             </div>
             <div class="col-xl-6 col-lg-6 col-12 d-flex flex-column">
                 <div class="movie-image d-flex justify-content-end align-items-center">
-                    <img class="w-75" src="{{movie.image_url}}" alt="{{movie.name}}" loading="lazy">
+                    <img alt="{{movie.name}}" class="w-75" loading="lazy" src="{{movie.image_url}}">
                 </div>
             </div>
+            <!-- Rental actions -->
+
             <div class="mt-4">
-                <!-- Add to cart -->
-                <form action="/orders/api/add" method="POST" class="form-group">
-                    <input type="hidden" name="movie_id" value="{{movie[0]}}">
-                    <button type="submit" class="btn btn-lg w-100 btn-primary">
-                        Add to Cart
-                    </button>
+                {% if 'user_id' in session %}
+                <!-- Show rental status or option to add to cart -->
+                {% if movie.rental_date and movie.rental_date >= datetime.now() %}
+                <button aria-disabled="true" class="btn btn-lg w-100 btn-primary px-5 py-3 disabled" role="button">Rented: Expires on
+                    {{ movie.rental_date.strftime('%d-%m-%Y') }}
+                </button>
+                {% else %}
+                <form action="/orders/api/add" class="form-group" method="POST">
+                    <input name="movie_id" type="hidden" value="{{ movie.id }}">
+                    <button class="btn btn-lg w-100 btn-primary" type="submit">Rent Now for ${{ movie.price }}</button>
                 </form>
+                {% endif %}
+                {% else %}
+                <a aria-disabled="true" class="btn btn-lg w-100 btn-primary px-5 py-3 disabled" role="button">Please log in to
+                    rent</a>
+                {% endif %}
             </div>
         </div>
 
-        <div data-scroll class="mt-5 container full-width d-flex flex-wrap p-0">
+        <div class="mt-5 container full-width d-flex flex-wrap p-0" data-scroll>
             <div class="full-width">
                 <h1 class="display-6"><strong>Reviews</strong></h1>
             </div>
-                {% if 'user_id' in session%}
-                <div class="full-width mb-3">
-                    <h5><strong>Add a review</strong></h5>
-                    <form method="post" action="/review/api/add" class="form-group review-form" style="width: 40%">
-                        <input type="hidden" name="movie_id" value="{{movie[0]}}">
-                        <label for="rating">Select a rating:</label>
-                        <select name="rating" class="form-select mb-2" aria-label="rating">
-                            <option value="5">5/5</option>
-                            <option value="4">4/5</option>
-                            <option value="3">3/5</option>
-                            <option value="2">2/5</option>
-                            <option value="1">1/5</option>
-                        </select>
-                        <label for="review">Review:</label>
-                        <textarea name="review" aria-label="review" required class="form-control mb-2"
-                            rows="3"></textarea>
-                        <button type="submit" class="btn btn-success">Add Review</button>
-        
-                    </form>
-                    </div>
-                    {% endif %}
-                <div data-scroll class="mt-5 container full-width d-flex flex-wrap flex-row p-0">
+            {% if 'user_id' in session%}
+            <div class="full-width mb-3">
+                <h5><strong>Leave a review</strong></h5>
+                <form action="/review/api/add" class="form-group review-form" method="post" style="width: 40%">
+                    <input name="movie_id" type="hidden" value="{{movie[0]}}">
+                    <label for="rating">Select a rating:</label>
+                    <select aria-label="rating" class="form-select mb-2" name="rating">
+                        <option value="5">5/5</option>
+                        <option value="4">4/5</option>
+                        <option value="3">3/5</option>
+                        <option value="2">2/5</option>
+                        <option value="1">1/5</option>
+                    </select>
+                    <label for="review">Review:</label>
+                    <textarea aria-label="review" class="form-control mb-2" name="review" required
+                              rows="3"></textarea>
+                    <button class="btn btn-success" type="submit">Add Review</button>
+
+                </form>
+            </div>
+            {% endif %}
+            <div class="mt-5 container full-width d-flex flex-wrap flex-row p-0" data-scroll>
                 {%for review in reviews %}
                 <div class="col-xl-4 col-l-4 col-s-12 col-12 col-md-6 p-0">
                     <div class="card h-100">
                         <div class="card-body mt-2">
                             {%for i in range(1, review.rating + 1) %}
-                                <img style="width:20px; height: 20px;" class="mb-1" src="{{url_for('static', filename='/img/star.png') }}" alt="star">
+                            <img alt="star" class="mb-1"
+                                 src="{{url_for('static', filename='/img/star.png') }}" style="width:20px; height: 20px;">
                             {%endfor%}
 
                             <p class="card-text">
@@ -154,15 +167,20 @@
                             </p>
 
 
-                             <!-- Add Edit Button -->
+                            <!-- Add Edit Button -->
                             {% if review.users_id == session.get('user_id') %}
-                                <a href="{{ url_for('review.edit', id=review.id) }}" class="btn btn-primary mt-2 ">Edit Review</a>
+                            <a class="btn btn-primary mt-2 " href="{{ url_for('review.edit', id=review.id) }}">Edit
+                                Review</a>
 
-                                <!-- Delete Form -->
-                                <form action="{{ url_for('review.delete', id=review.id) }}" method="POST" style="display:inline;">
-                                    <input type="hidden" name="movie_id" value="{{ movie.id }}">
-                                    <button type="submit" class="btn btn-danger mt-2" onclick="return confirm('Are you sure you want to delete this review?');">Delete Review</button>
-                                </form>
+                            <!-- Delete Form -->
+                            <form action="{{ url_for('review.delete', id=review.id) }}" method="POST"
+                                  style="display:inline;">
+                                <input name="movie_id" type="hidden" value="{{ movie.id }}">
+                                <button class="btn btn-danger mt-2" onclick="return confirm('Are you sure you want to delete this review?');"
+                                        type="submit">Delete
+                                    Review
+                                </button>
+                            </form>
                             {% endif %}
                         </div>
                     </div>
