--- a/views/movie/single.html
+++ b/views/movie/single.html
@@ -20,40 +20,8 @@
                         {%endif%}
                     </div>
 
-                    <!-- <div>
-                        <?php if (isset($_SESSION['user_id'])) { ?>
-                            <?php if ($check->num_rows == 0) { ?>
-                                <?php if (isset($_SESSION['cart_items'][$movie['id']])) { ?>
-                                    <a class="btn btn-primary px-5 py-3 disabled" role="button" aria-disabled="true">Movie
-                                        already in cart</a>
-                                <?php } else { ?>
-                                    <a href="/user/cart.php?movie_id=<?php echo $movie['id'] ?>"
-                                        class="px-5 py-3 btn btn-primary">Rent
-                                        now
-                                        for $
-                                        <?php echo $movie['price'] ?>
-                                    </a>
-                                <?php } ?>
-                            <?php } else { ?>
-                                <a class="btn btn-primary px-5 py-3 disabled" role="button" aria-disabled="true">You
-                                    have already rented this!</a>
-                            <?php } ?>
-                        <?php } else { ?>
-                            <a class="btn btn-primary px-5 py-3 disabled" role="button" aria-disabled="true">Please
-                                log in or register to rent</a>
-                        <?php } ?>
-                    </div> -->
-
                 </div>
                 <div class="directed mt-4 d-flex justify-content-between">
-                    <!-- <div>
-                        <h2><strong>DIRECTOR</strong></h2>
-                        <div>
-                            <h3>
-                                <?php echo $movie['directors'] ?>
-                            </h3>
-                        </div>
-                    </div> -->
                     <div>
                         <h3><strong>RELEASED</strong></h3>
                         <div>
@@ -99,17 +67,17 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-12 d-flex flex-column">
                 <div class="movie-image d-flex justify-content-end align-items-center">
-                    <img alt="{{movie.name}}" class="w-75" loading="lazy" src="{{movie.image_url}}">
+                    <img alt="{{movie.name}}" class="w-75" loading="lazy" src="https://image.tmdb.org/t/p/w500/{{movie.image_url}}">
                 </div>
             </div>
             <!-- Rental actions -->
 
             <div class="mt-4">
-                {% if 'user_id' in session %}
+            {% if 'user_id' in session %}
                 <!-- Show rental status or option to add to cart -->
-                {% if movie.rental_date and movie.rental_date >= datetime.now() %}
+                {% if is_active %}
                 <button aria-disabled="true" class="btn btn-lg w-100 btn-primary px-5 py-3 disabled" role="button">Rented: Expires on
-                    {{ movie.rental_date.strftime('%d-%m-%Y') }}
+                    {{ rental_expiry.strftime('%d-%m-%Y') }}
                 </button>
                 {% else %}
                 <form action="/orders/api/add" class="form-group" method="POST">
@@ -120,7 +88,7 @@
                 {% else %}
                 <a aria-disabled="true" class="btn btn-lg w-100 btn-primary px-5 py-3 disabled" role="button">Please log in to
                     rent</a>
-                {% endif %}
+            {% endif %}
             </div>
         </div>
 
@@ -129,25 +97,26 @@
                 <h1 class="display-6"><strong>Reviews</strong></h1>
             </div>
             {% if 'user_id' in session%}
-            <div class="full-width mb-3">
-                <h5><strong>Leave a review</strong></h5>
-                <form action="/review/api/add" class="form-group review-form" method="post" style="width: 40%">
-                    <input name="movie_id" type="hidden" value="{{movie[0]}}">
-                    <label for="rating">Select a rating:</label>
-                    <select aria-label="rating" class="form-select mb-2" name="rating">
-                        <option value="5">5/5</option>
-                        <option value="4">4/5</option>
-                        <option value="3">3/5</option>
-                        <option value="2">2/5</option>
-                        <option value="1">1/5</option>
-                    </select>
-                    <label for="review">Review:</label>
-                    <textarea aria-label="review" class="form-control mb-2" name="review" required
-                              rows="3"></textarea>
-                    <button class="btn btn-success" type="submit">Add Review</button>
-
-                </form>
-            </div>
+                {% if not review_exists %}
+                    <div class="full-width mb-3">
+                        <h5><strong>Leave a review</strong></h5>
+                        <form action="/review/api/add" class="form-group review-form" method="post" style="width: 40%">
+                            <input name="movie_id" type="hidden" value="{{movie[0]}}">
+                            <label for="rating">Select a rating:</label>
+                            <select aria-label="rating" class="form-select mb-2" name="rating">
+                                <option value="5">5/5</option>
+                                <option value="4">4/5</option>
+                                <option value="3">3/5</option>
+                                <option value="2">2/5</option>
+                                <option value="1">1/5</option>
+                            </select>
+                            <label for="review">Review:</label>
+                            <textarea aria-label="review" class="form-control mb-2" name="review" required
+                                    rows="3"></textarea>
+                            <button class="btn btn-success" type="submit">Add Review</button>
+                        </form>
+                    </div>
+                {% endif %}
             {% endif %}
             <div class="mt-5 container full-width d-flex flex-wrap flex-row p-0" data-scroll>
                 {%for review in reviews %}
