--- a/views/partials/_navbar.html
+++ b/views/partials/_navbar.html
@@ -19,18 +19,11 @@
                 <li class="nav-item ms-4">
                     <a class="nav-link text-white rounded" href="/about-us">About Us</a>
                 </li>
-                <!-- <li class="nav-item ms-4">
-                    <a class="nav-link" href="/user/orderHistory.php">History</a>
+
+                <li class="nav-item ms-4"></li>
+                    <a class="nav-link text-white rounded" href="/forum">Forum</a>
                 </li>
 
-                <li class="nav-item ms-4">
-                    <a class="nav-link" href="/user/user_library.php">Library</a>
-                </li>
-                
-                <li class="nav-item ms-4">
-                    <a class="nav-link" href="/user/mailbox.php">Mailbox</a>
-                </li>
-                 -->
                 <li class="nav-item ms-4">
                     <a class="nav-link text-white" href="/user/contact.php">Contact Us</a>
                 </li>
