--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,18 @@
   .navbar {
     z-index: 1050; /* Higher than other page elements */
 }
+
+.navbar-brand {
+    display: inline-block;   /* Ensures that the <a> wraps tightly around the image */
+    padding: 0;              /* Removes any default padding */
+    margin: 0;               /* Removes any default margin */
+}
+
+.navbar-brand img {
+    display: block;          /* Ensures the image behaves like a block, not inline */
+    width: auto;             /* Ensures the width adjusts according to the image's natural ratio */
+    height: 60px;            /* Keeps the image height fixed at 60px */
+}
   
   /** Scrolling stuff, just ignore **/
   
