--- a/views/partials/_navbar.html
+++ b/views/partials/_navbar.html
@@ -1,46 +1,43 @@
 <nav aria-label="Main Navigation" class="navbar navbar-expand-lg" data-scroll-section>
     <div class="container-fluid">
-        <a class="navbar-brand logo display-5 col-1" href="/">
-            <img alt="Cinema Stream" src="{{ url_for('static', filename='/img/cinema_stream_logo.png') }}"
-                 style="height: 60px">
+        <a class="navbar-brand logo" href="/">
+            <img alt="Cinema Stream" src="{{ url_for('static', filename='/img/cinema_stream_logo.png') }}">
         </a>
         <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-bs-target="#navbarSupportedContent"
                 data-bs-toggle="collapse" type="button">
-            <span class="navbar-toggler-icon"></span>
+            <i class="fas fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item ms-4">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item me-4">
                     <a class="nav-link text-white rounded" href="/">
-                        <i class="fas fa-film mr-2"></i> Movies</a>
+                        <i class="fas fa-film me-1"></i> Movies</a>
                 </li>
 
-                <li class="nav-item ms-4">
-                    <a class="nav-link text-white rounded" href="/about-us">About Us</a>
+                <li class="nav-item">
+                    <a class="nav-link text-white rounded" href="/forum">
+                        <i class="fas fa-comment me-1"></i> Forum</a>
                 </li>
-
-                <li class="nav-item ms-4"></li>
-                    <a class="nav-link text-white rounded" href="/forum">Forum</a>
-                </li>
-
-                <li class="nav-item ms-4">
-                    <a class="nav-link text-white" href="/user/contact.php">Contact Us</a>
-                </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
 
                 {% if 'user_id' in session %}
                 <li class="nav-item ms-4">
                     <a class="nav-link text-white" href="/user/cart">
-                        <i class="fas fa-shopping-cart mr-2"></i> Cart</a>
+                        <i class="fas fa-shopping-cart me-1"></i> Cart</a>
                 </li>
-                <li class="nav-item dropdown ms-4 position-relative">
+                <li class="nav-item ms-4 dropdown position-relative">
                     <a class="btn text-white dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-id-card mr-1"></i> Profile
+                        <i class="fas fa-user me-1"></i> Profile
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="profileDropdown" style="z-index: 1050;">
-                        <li><a class="dropdown-item" href="/user/profile">View Profile</a></li>
-                        <li><a class="dropdown-item" href="/rentals/">My Rentals</a></li>
-                        <li><a class="dropdown-item" href="/purchases/history">Order History</a></li>
+                        <li><a class="dropdown-item" href="/user/profile">
+                            <i class="fas fa-id-card me-1"></i>My Profile</a></li>
+                        <li><a class="dropdown-item" href="/rentals/">
+                            <i class="fas fa-play me-1"></i> My Rentals</a></li>
+                        <li><a class="dropdown-item" href="/purchases/history">
+                            <i class="fas fa-file-invoice-dollar me-1"></i>Order History</a></li>
                     </ul>
                 </li>
                 
@@ -55,7 +52,7 @@
 
                 <li class="nav-item ms-4">
                     <a class="btn btn-danger" href="/user/logout">
-                        <i class="fas fa-power-off mr-2"></i> Logout</a>
+                        <i class="fas fa-power-off me-1"></i> Logout</a>
                 </li>
                 {%else%}
                 <li class="nav-item ms-4">
