--- a/views/user/history.html
+++ b/views/user/history.html
@@ -1,26 +1,32 @@
 {% extends "layouts/base.html" %}
 {% block body %}
 
-<div class="container mt-5">
-    <h2>Order History</h2>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Movie Name</th>
-                <th>Price</th>
-                <th>Purchase Date</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for history, purchase_timestamp in history_items %}
-            <tr>
-                <td>{{ history.movie_name }}</td>
-                <td>${{ history.price }}</td>
-                <td>{{ purchase_timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+<section>
+    <div class="container mt-5">
+        {% if history_items %}
+        <h2 class="text-center">Order History</h2>
+        <table class="table table-striped text-center">
+            <thead>
+                <tr>
+                    <th>Movie Name</th>
+                    <th>Price</th>
+                    <th>Purchase Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for history, purchase_timestamp in history_items %}
+                <tr>
+                    <td>{{ history.movie_name }}</td>
+                    <td>${{ history.price }}</td>
+                    <td>{{ purchase_timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% else %}
+        <h2 class="text-center">No purchase history</h2>
+        {% endif %}
+    </div>
+</section>
 
 {% endblock %}
