--- a/views/user/cart.html
+++ b/views/user/cart.html
@@ -1,59 +1,69 @@
 {% extends "layouts/base.html" %}
 {% block body %}
 
-<section style="min-height:51vh;" class="container d-flex flex-column justify-content-center align-items-center pt-5" data-scroll-section>
-    <div class="w-75 mb-2 text-center">
-        <h2>Your Cart</h2>
-    </div>
+<section class="container mt-4" data-scroll-section>
+    <div class="row">
+        <div class="col-12 col-md-9 order-1 order-md-0">
+            <div class="view view-cascade primary-light-gradient narrower py-2 mx-4 mb-3 d-flex justify-content-center align-items-center text-center">
+                <h2 class="white-text mx-3">Cart</h2>
+            </div>
 
-    <!-- Check if there are orders -->
-    {% if orders %}
-    <div class="w-75">
-        <table class="table text-center">
-            <thead>
-                <tr>
-                    <th>Movie Name</th>
-                    <th>Price</th>
-                    <th>Action</th> <!-- Add a new column for the remove button -->
-                </tr>
-            </thead>
-            <tbody>
-                {% for order in orders %}
-                <tr>
-                    <td>{{ order.name }}</td> <!-- Display the movie name -->
-                    <td>${{ order.total_price }}</td> <!-- Display the price -->
-                    <td>
-                        <!-- Remove Button -->
-                        <form action="/orders/api/remove" method="post">
-                            <input type="hidden" name="order_id" value="{{ order.id }}">
-                            <button type="submit" class="btn btn-danger">Remove</button>
-                        </form>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-
-    <!-- Total Price and Proceed to Payment Button -->
-    <div class="w-75 mt-3 d-flex justify-content-end">
-        <div class="text-end">
-            <!-- Total Price -->
-            <h4>Total Price: ${{ total_sum }}</h4>
-            <!-- Proceed to Payment Button (below the total price) -->
-            <form action="/purchases/api/payment" method="get">
-                <input type="hidden" name="total_sum" value="{{ total_sum }}">
-                <button type="submit" class="btn btn-primary mt-2">Proceed to Payment</button>
-            </form>
+            <!-- Check if there are orders -->
+            {% if orders %}
+            <div class="table-responsive table-hover w-100">
+                <table class="table table-striped text-center" id="table">
+                    <thead>
+                    <tr>
+                        <th class="th-sm">Movie Name</th>
+                        <th class="th-sm">Price</th>
+                        <th class="th-sm">Action</th> <!-- Add a new column for the remove button -->
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for order in orders %}
+                    <tr class="animated faster">
+                        <td class="align-middle">{{ order.name }}</td> <!-- Display the movie name -->
+                        <td class="align-middle">${{ order.total_price }}</td> <!-- Display the price -->
+                        <td class="align-middle">
+                            <!-- Remove Button -->
+                            <form action="/orders/api/remove" method="post">
+                                <input name="order_id" type="hidden" value="{{ order.id }}">
+                                <button class="btn btn-danger" type="submit">Remove <i class="fas fa-times ml-2"></i>
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
+
+        <!-- Total Price and Proceed to Payment Button -->
+        <div class="col-12 col-md-3 my-4 my-md-0 order-0 order-md-1">
+            <div class="card card-cascade narrower">
+                <div
+                        class="view view-cascade narrower py-2 mx-4 mb-3 d-flex justify-content-center align-items-center text-center">
+                    <h2 class="mx-3 d-inline">Total: ${{ total_sum }}</h2>
+                </div>
+                <hr class="w-100" />
+                <div class="card-body">
+                    <!-- Proceed to Payment Button (below the total price) -->
+                    <form action="/purchases/api/payment" method="get">
+                        <input name="total_sum" type="hidden" value="{{ total_sum }}">
+                        <button class="btn btn-primary mt-2 w-100" type="submit">Proceed to Payment</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+        {% else %}
+        <div class="col-12 text-center">
+            <p>Your cart is empty.</p>
+        </div>
+        {% endif %}
     </div>
-    
-    
-    {% else %}
-    <div class="w-75">
-        <p>Your cart is empty.</p>
-    </div>
-    {% endif %}
 </section>
 
 {% endblock %}
