--- a/views/user/history.html
+++ b/views/user/history.html
@@ -1,9 +1,8 @@
 {% extends "layouts/base.html" %}
 {% block body %}
 
-<section>
+<section class="history">
     <div class="container mt-5">
-        {% if history_items %}
         <div class="row">
             <div class="col-12 col-md-9 order-1 order-md-0">
                 <div class="card narrower">
@@ -14,20 +13,20 @@
                     <hr class="w-100" />
                     <div class="card-body">
                         <div class="table-responsive table-hover w-100">
-                            <table class="table table-striped text-center">
+                            <table class="table table-striped text-center" id="history-table">
                                 <thead>
                                 <tr>
-                                    <th class="th-sm">Movie Name</th>
-                                    <th class="th-sm">Price</th>
-                                    <th class="th-sm">Rented on</th>
+                                    <th id="name" class="th-sm">Movie Name</th>
+                                    <th id="price" class="th-sm">Price</th>
+                                    <th id="date" class="th-sm">Rented on</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 {% for history, purchase_timestamp in history_items %}
                                 <tr class="animated faster">
-                                    <td class="align-middle">{{ history.movie_name }}</td>
-                                    <td class="align-middle">${{ history.price }}</td>
-                                    <td class="align-middle">{{ purchase_timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                                    <td class="align-middle" headers="name">{{ history.movie_name }}</td>
+                                    <td class="align-middle" headers="price">${{ history.price }}</td>
+                                    <td class="align-middle" headers="date">{{ purchase_timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
                                 </tr>
                                 {% endfor %}
                                 </tbody>
@@ -51,10 +50,8 @@
                 </div>
             </div>
         </div>
-        {% else %}
-        <h2 class="text-center">No purchase history</h2>
-        {% endif %}
     </div>
 </section>
+<script src="/public/js/history.js"></script>'
 
 {% endblock %}
