--- a/views/index.html
+++ b/views/index.html
@@ -155,15 +155,6 @@
                         </p>
 
                         <hr class="w-100"/>
-
-                        <!--                            {% if movie.average_rating %}-->
-                        <!--                            {%for i in range(1, movie.average_rating | int + 1)%}-->
-                        <!--                                <img style="width:20px; height: 20px;" class="mt-3 mb-1" src="/static/star.png" alt="star">-->
-                        <!--                            {% endfor %}-->
-                        <!--                            <p>From-->
-                        <!--                                {{movie.total_reviews}} reviews-->
-                        <!--                            </p>-->
-                        <!--                            {% endif %}-->
                         <div class="row mt-2">
                             <div class="col text-start">
                                 <p>
@@ -173,6 +164,10 @@
                             <div class="col text-end">
                                 <p class="card-text"><i class="fas fa-clock mr-2"></i>
                                     {{movie.runtime}} minutes
+                            </div>
+                            <div class="w-100">
+                                </p>
+                                    Available in: {{movie.language}}
                                 </p>
                             </div>
                         </div>
@@ -182,10 +177,16 @@
                     <div class="col text-start">
                         <!-- Create a form that submits to the add orders route -->
                         <form action="/orders/api/add" method="POST">
-                            <input name="movie_id" type="hidden" value="{{ movie.id }}">
-                            <button class="btn btn-primary" type="submit">
-                                Add to Cart
-                            </button>
+                            {% if movie.in_cart == 0 %}
+                                <input name="movie_id" type="hidden" value="{{ movie.id }}">
+                                <button class="btn btn-primary" type="submit">
+                                    Add to Cart
+                                </button>
+                            {%else%}
+                                <button class="btn btn-primary" type="submit" disabled>
+                                    Already in cart
+                                </button>
+                            {%endif%}
                         </form>
                     </div>
                     <div class="col text-end">
