--- a/views/index.html
+++ b/views/index.html
@@ -108,7 +108,7 @@
         </div>
         <form action="/movie/search" autocomplete="off" class="mb-3 d-flex align-items-center" method="post">
             <div class="autocomplete" style="width:300px;">
-                <input class="form-control" id="myInput" name="searchName" placeholder="Movie Name" type="text">
+                <input class="form-control" id="myInput" name="searchName" placeholder="Movie Name, Genre or Language" type="text">
             </div>
             <button class="ms-2 btn btn-info text-white" type="submit">Search</button>
         </form>
