--- a/public/css/style.css
+++ b/public/css/style.css
@@ -182,6 +182,11 @@
   .full-width {
     width: 100%;
   }
+
+  .card-img-top {
+    object-fit: cover;
+    object-position: center;
+  }
   
   .accordion {
     width: 100%;
