--- a/views/movie/single.html
+++ b/views/movie/single.html
@@ -1,14 +1,15 @@
 {% extends "layouts/base.html" %}
 {% block body %}
+
 <section class="post-content" data-scroll-section>
     <div class="container d-flex flex-column">
         <div class="w-100 d-flex row mt-3 px-0 justify-between" id="single_movie_deets">
             <div class="col-xl-6 col-lg-6 col-12 d-flex flex-column">
                 <h1 class="display-1">
-                    {{movie.name}}
+                    {{movie.title}}
                 </h1>
                 <p class="mt-3">
-                    {{movie.synopsis}}
+                    {{movie.overview}}
                 </p>
                 <div class="mt-1 d-flex flex-column w-50">
                     <div class="d-flex align-center mb-3">
@@ -43,14 +44,14 @@
                     <div>
                         <h3><strong>GENRES</strong></h3>
                         <h5>
-                            {{movie.genre}}
+                            {{movie.genres}}
                         </h5>
                     </div>
                     <div>
                         <h3><strong>LANGUAGES</strong></h3>
                         <div>
                             <h5>
-                                {{movie.language}}
+                                {{movie.spoken_language}}
                             </h5>
                         </div>
                     </div>
@@ -104,7 +105,7 @@
             <div class="full-width mb-3">
                 <h5><strong>Leave a review</strong></h5>
                 <form action="/review/api/add" class="form-group review-form" method="post" style="width: 40%">
-                    <input name="movie_id" type="hidden" value="{{movie[0]}}">
+                    <input name="movie_id" type="hidden" value="{{ movie._id }}"> 
                     <label for="rating">Select a rating:</label>
                     <select aria-label="rating" class="form-select mb-2" name="rating">
                         <option value="5">5/5</option>
@@ -127,7 +128,7 @@
                 <div class="col-xl-4 col-l-4 col-s-12 col-12 col-md-6 p-0">
                     <div class="card h-100">
                         <div class="card-body mt-2">
-                            {%for i in range(1, review.rating + 1) %}
+                            {%for i in range(1, review['rating'] + 1) %}
                             <img alt="star" class="mb-1"
                                  src="{{url_for('static', filename='/img/star.png') }}"
                                  style="width:20px; height: 20px;">
@@ -137,19 +138,17 @@
                                 {{review.body}}
                             </p>
                             <p class="card-title">Written by:
-                                {{review.username}}
+                                {{review.user_info.username}}
                             </p>
-
-
-                            <!-- Add Edit Button -->
-                            {% if review.users_id == session.get('user_id') %}
-                            <a class="btn btn-primary mt-2 " href="{{ url_for('review.edit', id=review.id) }}">Edit
+                            
+                            {% if review.user_info._id == session['user_id'] %}
+                            <a class="btn btn-primary mt-2 " href="{{ url_for('review.edit', id=review._id) }}">Edit
                                 Review</a>
 
                             <!-- Delete Form -->
-                            <form action="{{ url_for('review.delete', id=review.id) }}" method="POST"
+                            <form action="{{ url_for('review.delete', id=review._id) }}" method="POST"
                                   style="display:inline;">
-                                <input name="movie_id" type="hidden" value="{{ movie.id }}">
+                                <input name="movie_id" type="hidden" value="{{ review.movies_id }}">
                                 <button class="btn btn-danger mt-2"
                                         onclick="return confirm('Are you sure you want to delete this review?');"
                                         type="submit">Delete
