--- a/views/forum/single.html
+++ b/views/forum/single.html
@@ -13,14 +13,14 @@
                         object-fit: cover;
                         border: 1px solid black;
                     "
-                    src="{{ thread.profile_pic_url }}"
+                    src="{{ thread.user_info.profile_pic_url }}"
                     alt="Profile Image"
                     />
                 </div>
                 <div class = "h-75 py-3 d-flex flex-column align-items-center">
-                    <h4 class = "text-dark">{{thread.username}}</h4>
-                    <p class = "text-dark m-0">{{thread.email}}</p>
-                    {%if thread.admin_controls == 1 %}
+                    <h4 class = "text-dark">{{thread.user_info.username}}</h4>
+                    <p class = "text-dark m-0">{{thread.user_info.email}}</p>
+                    {%if thread.user_info.admin_controls == 1 %}
                     <h5 class = "text-danger mt-2"><strong>Admin</strong></h5>
                     {%endif%}
                 </div>
@@ -32,7 +32,7 @@
                     <button type="button" class="btn btn-warning me-1" data-bs-toggle="modal" data-bs-target="#editThreadModal">
                         Edit Thread
                     </button>
-                    <a href="{{ url_for('forum.deleteThread', id = thread.id) }}" class="btn btn-danger me-2">Delete Thread</a>
+                    <a href="{{ url_for('forum.deleteThread', id = thread._id) }}" class="btn btn-danger me-2">Delete Thread</a>
                 </div>
                 {%endif%}
             {%endif%}
@@ -65,13 +65,13 @@
                             object-fit: cover;
                             border: 1px solid black;
                         "
-                        src="{{ post.profile_pic_url }}"
+                        src="{{ post.user_info.profile_pic_url }}"
                         alt="Profile Image"
                         />
                     </div>
                     <div class = "d-flex flex-column align-items-center">
-                        <h5 class = "mt-2"><strong>{{post.username}}</strong></h5>
-                        {%if post.admin_controls == 1 %}
+                        <h5 class = "mt-2"><strong>{{post.user_info.username}}</strong></h5>
+                        {%if post.user_info.admin_controls == 1 %}
                             <h6 class = "text-danger m-0"><strong>Admin</strong></h6>
                         {%endif%}
                     </div>
@@ -84,19 +84,19 @@
                     <div style = "margin-top:auto" class = "w-100">
                         <div>
                             {%if 'user_id' in session and session['user_id'] == post.user_id%}
-                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{post.id}}" aria-expanded="false" aria-controls="collapse-{{post.id}}">
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{post._id}}" aria-expanded="false" aria-controls="collapse-{{post._id}}">
                                 Edit Reply
                             </button>
-                            <div class="collapse" id="collapse-{{post.id}}">
+                            <div class="collapse" id="collapse-{{post._id}}">
                                 <form action="/forum/api/editReply" method="POST" enctype="multipart/form-data">
                                     <textarea name="content" value = "{{post.content}}" class="form-control"
                                     rows="3">{{post.content}}</textarea>
-                                    <input type="hidden" name="thread_id" value = {{thread.id}}>
-                                    <input type="hidden" name="post_id" value = {{post.id}}>
+                                    <input type="hidden" name="thread_id" value = {{thread._id}}>
+                                    <input type="hidden" name="post_id" value = {{post._id}}>
                                     <button type="submit" class="btn btn-success">Submit reply</button>
                                 </form>
                             </div>
-                            <a href="{{ url_for('forum.deleteReply', id = post.id, thread_id = thread.id) }}" class="btn btn-danger me-2">Delete Reply</a>
+                            <a href="{{ url_for('forum.deleteReply', id = post._id, thread_id = thread._id) }}" class="btn btn-danger me-2">Delete Reply</a>
                             {%endif%}
                         </div>
                         <hr class="hr w-100" />
@@ -111,7 +111,7 @@
             <div style = "min-height: 200px" class = "text-dark d-flex flex-column shadow p-3 mb-5 bg-body-tertiary rounded">
                 <h5><strong>Leave a reply</strong></h5>
                 <form action="/forum/api/reply" class="form-group review-form w-100" method="post" style="width: 40%">
-                    <input type="hidden" name="thread_id" value = "{{thread.id}}">
+                    <input type="hidden" name="thread_id" value = "{{thread._id}}">
                     <textarea aria-label="review" class="form-control mb-2" name="content" required
                             rows="4"></textarea>
                     <button class="btn btn-success" type="submit">Reply</button>
